[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orapy_chart"
version = "0.1.0"
description = "Chart utilities for Oracle AWR/ASH visualization"
authors = [{ name="Thanh Tai", email="thanhtai.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.2.3",
    "flask>=3.1.0",
    "pydantic>=1.8.0",
    "snapshot-selenium"
]

[project.urls]
Homepage = "https://github.com/Thanh-Tai-1510/orapy_chart"
Repository = "https://github.com/Thanh-Tai-1510/orapy_chart.git"
Issues = "https://github.com/Thanh-Tai-1510/orapy_chart/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.8.0"
]