[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orapy_chart"
version = "0.1.0"
description = "Reusable chart components built on top of pyecharts"
authors = [{ name = "Your Name" }]
readme = "README.md"
dependencies = [
    "pandas>=1.5.0",
    "pyecharts>=1.9.0",
    "pydantic>=2.0"
]
