[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orapy_chart"
version = "0.1.0"
description = "Chart utilities for Oracle AWR/ASH visualization"
authors = [{ name="Your Name", email="your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
        "pandas",
        "base64",
        "uuid",
        "os",
]
